# rust_webserver

./: Cargo.toml
controller_macro/: Cargo.toml
controller_macro/src/: lib.rs
src/: lib.rs  main.rs
src/controller/: mod.rs  v1_controller.rs  v1_controller_test.rs  v2_controller.rs  v2_controller_test.rs
src/middleware/: auth.rs  context.rs
