workspace = { members = ["controller_macro"] }
[package]
name = "test_macro"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.5"
tokio = { version = "1.0", features = ["full"] }
controller_macro = { path = "./controller_macro" }
uuid = { version = "1.10.0", features = ["v4", "macro-diagnostics"] }
